--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,27 @@
-
-.Purchase{
-    display: flex;
-    flex-direction: row;
-    .CardGrid{
-        flex-grow: 1;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(16rem, 20rem));
-        gap: 2rem;
-        justify-content: center;
-    }
-    .Basket{
-        min-width: 350px;
-        max-width: 30%;
+.App{
+    min-height: 100vh;
+    height: 100%;
+    background-image: linear-gradient(90deg, rgb(40,40,40,0.75) 0%,
+     rgba(40,40,40,0.5) 50%, rgba(40,40,40,0.75) 100%),
+    url("./pizza-background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .Purchase{
+        padding: 15px;
+        display: flex;
+        flex-direction: row;
+        
+        .CardGrid{
+            flex-grow: 1;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(16rem, 20rem));
+            gap: 2rem;
+            justify-content: center;
+        }
+        .Basket{
+            min-width: 350px;
+            max-width: 30%;
+        }
     }
 }
